Logo spacing corrected

--- a/nocout/nocout/static/css/nocout_default.css
+++ b/nocout/nocout/static/css/nocout_default.css
@@ -608,7 +608,7 @@ table.dataTable thead th, table.dataTable tfoot th{
 .switcher {
   padding: 10px 10px 0 0 !important;
   position: absolute !important;;
-  top: 10px !important;;
+  top: 8.5px !important;;
   left: 10px !important;;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
